# Learning

./: .gitignore  AI.sln  README.md  animFlex.data  animFlex.js  animFlex.wasm  graphManifest.json  index.html  manifest.json  rete.js
AI/: AI.cpp  AI.vcxproj
ai/: ai.sln
ai/ai/: ai.cpp  ai.vcxproj
ai/anomalyDetection/: C3_W1_Anomaly_Detection.ipynb
ai/collaborativeFiltering/: C3_W2_Collaborative_RecSys_Assignment.ipynb
ai/contentBasedFiltering/: C3_W2_RecSysNN_Assignment.ipynb
ai/k_meansClustering/: C3_W1_KMeans_Assignment.ipynb
ai/linearRegression/: LinearRegressionMultipleFeatures.ipynb  LinearRegressionMultipleFeaturesScaled.ipynb  MyFirstLinearRegression.ipynb  NumPy_Structures.ipynb
ai/logisticRegression/: LogisticRegression0.ipynb  LogisticRegression1.ipynb  LogisticRegression2.ipynb  LogisticRegression3.ipynb  LogisticRegression_FeatureScaling.ipynb  LogisticRegression_FeatureScalingOverfittingGeneralization.ipynb  testCommit.txt
ai/neuralNetworks/: NeuralNetworks_CrossValidation.ipynb  NeuralNetworks_ForwardPropagation.ipynb  NeuralNetworks_MulticlassClassification.ipynb  PartialDerivatives.ipynb
ai/reinforcedLearningMoonlander/: C3_W3_A1_Assignment.ipynb
animFlex/: .gitignore  AFBackgroundComponent.cpp  build_manifest.py  cook_assets.bat  cook_curves.bat  cook_manifest.bat  graph.json  graphManifest.json  make_manifest.bat  webassembly_build.bat  webassembly_buildVite.bat  webassembly_deploy.bat  webassembly_localhost.bat
animFlex/cmake/: CMakeLists.txt
animFlex/graph/: afanimgraphnode.tsx  afchecker.tsx  afconnection.tsx  afdropdown.tsx  afdropdownEnum.tsx  afeditorinstance.ts  affloatfield.tsx  affunclib.ts  affunclib.tsx  afmanager.tsx  afmath.ts  afnode.ts  afnode.tsx  afnodeFactory.ts  afnodevars.ts  afsocket.tsx  aftypes.tsx  afvectorfield.tsx  background.css  circle-socket.ts  consts.ts  custom-background.ts  math.ts  path.ts  rete.ts  rete.tsx  reteCond.tsx  retesm.tsx  types.ts  zoom.ts
animFlex/source/: AFActor.cpp  AFActor.h  AFAnimGraph.cpp  AFAnimGraph.h  AFAnimGraphCond.cpp  AFAnimGraphCond.h  AFAnimState.cpp  AFAnimState.h  AFAnimationChannel.cpp  AFAnimationChannel.h  AFAnimationClip.cpp  AFAnimationClip.h  AFApp.cpp  AFApp.h  AFAsset.cpp  AFAsset.h  AFBackgroundComponent.cpp  AFBackgroundComponent.h  AFBoxComponent.cpp  AFBoxComponent.h  AFCamera.cpp  AFCamera.h  AFCameraComponent.cpp  AFCameraComponent.h  AFCameraManager.cpp  AFCameraManager.h  AFCameraMovementComponent.cpp  AFCameraMovementComponent.h  AFCharacterMovementComponent.cpp  AFCharacterMovementComponent.h  AFComponent.cpp  AFComponent.h  AFComponentOwner.cpp  AFComponentOwner.h  AFConfig.cpp  AFConfig.h  AFContent.cpp  AFContent.h  AFDebugShapeActor.cpp  AFDebugShapeActor.h  (+210 more)
animFlex/webassembly/: template.html
animFlex_cooking/: animFlex_cooking.cpp
animFlex_cooking/source/: AFCooking.cpp  AFCooking.h  animFlex_cooking.cpp
assets/: index-CbWeJXg-.css  index-DPxSuGxC.css
concurrency/concurrency2020/: concurrency2020.sln
design_patterns/Command/: Command.sln
docs/: animFlex.data  animFlex.js  animFlex.wasm  index.html
jupyter/ai_for_games/: animation_test.ipynb  animation_test_v2.ipynb  exercises_3.19-3.20.ipynb  exercises_3.19.ipynb  exercises_3.21-3.23.ipynb  leqanimlib.py  leqmath.py
jupyter/photogrammetry/: photogrammetry_exercise_01.ipynb  photogrammetry_exercise_02.ipynb  photogrammetry_exercise_03.ipynb  photogrammetry_exercise_04.ipynb  photogrammetry_exercise_05.ipynb  photogrammetry_exercise_06.ipynb  photogrammetry_exercise_07.ipynb  photogrammetry_exercise_08.ipynb  photogrammetry_exercise_09.ipynb  photogrammetry_exercise_10.ipynb  photogrammetry_exercise_11.ipynb  photogrammetry_exercise_12.ipynb  photogrammetry_exercise_13.ipynb  photogrammetry_exercise_14.ipynb  photogrammetry_exercise_15.ipynb  photogrammetry_exercise_16.ipynb  photogrammetry_exercise_crossCorrelation.ipynb  photogrammetry_exercise_transformations.ipynb
math/vectors/: vectors.sln
matplotlib/: MyPlotting.ipynb
matrixes/: matrixes.sln
matrixes/matrixes/: matrixes.cpp
scripts/blender/: massFBXtoGLTF.py
scripts/maya/: combineShapes.py  limits_expression.txt  massGLTFAnim.py
scripts/motionbuilder/: massFixUEExport.py
testfun/: testfun.cpp  testfun.sln  testfun.vcxproj  testfun.vcxproj.filters
testfun/src/: testfun.cpp
(+392 files in other folders)
